--- a/teamcostco/src/main/resources/static/css/contents/cart_list.css
+++ b/teamcostco/src/main/resources/static/css/contents/cart_list.css
@@ -40,6 +40,7 @@ h4 {
     display: flex;
     flex-direction: column;
     font-size: 14px;
+    flex: 1;
 }
 
 .item_info_area p {
@@ -57,16 +58,16 @@ h4 {
 .item_label {
     width: 100px;
 }
-
-.item_value {
-    width: 250px;
-}
-
 .item_value.link {
     color: #007bff;
     text-decoration: underline;
     cursor: pointer;
+}
 
+.item_value.discount {
+    margin-right: 10px;
+    color:rgb(189, 189, 189);
+    text-decoration: line-through;
 }
 
 .item_image_area {
@@ -93,6 +94,7 @@ h4 {
     flex-direction: row;
     padding: 20px;
     justify-content: flex-start;
+    width: 100%;
 }
 
 .checkbox_area {
@@ -237,7 +239,7 @@ h4 {
     flex-direction: column;
     background-color: #fff;
     border: 1px solid #eaeaff;
-    height: 300px;
+    height: 400px;
     padding: 20px;
     width: 360px;
 }
