--- a/teamcostco/src/main/resources/templates/common/sidebar.html
+++ b/teamcostco/src/main/resources/templates/common/sidebar.html
@@ -17,7 +17,7 @@
             <li><a href="#">공지사항</a></li>
         </ul>
     </div>
-
+    <div class="divider"></div>
     <div class="menu-section">
         <ul class="menu-items">
             <li><a href="/logout">로그아웃</a></li>
