--- a/teamcostco/src/main/resources/templates/index.html
+++ b/teamcostco/src/main/resources/templates/index.html
@@ -21,6 +21,7 @@
             <link rel="stylesheet" th:href="@{${cssFile}}" />
         </th:block>
     </th:block>
+    <meta name="viewport" content="width=device-width, initial-scale=0.4">
 </head>
 
 <body>
