--- a/teamcostco/src/main/resources/templates/intro/intro.html
+++ b/teamcostco/src/main/resources/templates/intro/intro.html
@@ -32,7 +32,7 @@
         <div class="carousel-wrapper">
             <div class="product-carousel">
                 <div th:each="product : ${recommend_products}" class="product-item">
-                    <img th:src="@{|/api/placeholder/200/200|}" alt="제품 이미지">
+                    <img th:src="${product.thumbnail_url}" alt="제품 이미지" class="product-thumbnail">
                     <h4 th:text="${product.product_name}"></h4>
                     <p th:text="'￦' + ${product.selling_price}"></p>
                 </div>
