Contact Us 지도이미지 수정

--- a/teamcostco/src/main/resources/templates/contactus.html
+++ b/teamcostco/src/main/resources/templates/contactus.html
@@ -5,7 +5,7 @@
             <li>서울 노원구 상계로 64 화랑빌딩 7F (주)코스트코</li>
             <li>위치는 노원역 4호선 2번출구 앞 화랑빌딩(롯데리아,다이소) 4F입니다</li>
             <!-- API 로 맵 로딩-->
-            <img src="../static/images/costco_location.png" alt="코스트코 위치입니다">
+            <img th:src="@{/images/costco_location.png}" alt="코스트코 위치입니다">
         </div>
         <div class="introduction_box">
             <h1>문의하기</h1>
