--- a/teamcostco/src/main/resources/static/css/contents/sales_list.css
+++ b/teamcostco/src/main/resources/static/css/contents/sales_list.css
@@ -96,3 +96,35 @@
     height: 70px;
     object-fit: cover;
 }
+
+.modal_content button {
+    padding: 8px 12px;
+    margin: 0 5px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+#go_to_cart {
+    background-color: #007bff;
+    color: #fff;
+}
+
+#continue_shopping {
+    background-color: #6c757d;
+    color: #fff;
+}
+
+
+.cart_button {
+    height: 30px;
+    min-width: 100px;
+    width: 100px;
+    margin-top: auto;
+    margin-right: 20px;
+    margin-left: 20px;
+    border: 1px solid #eef;
+    background-color: #fefeff;
+    cursor: pointer;
+    margin-left: auto;
+}
