배송비로직추가/썸네일aws연동

--- a/teamcostco/src/main/resources/templates/common/header.html
+++ b/teamcostco/src/main/resources/templates/common/header.html
@@ -12,9 +12,9 @@
                 </span>
             </div>
             <div class="nav-components">
-            <a href="/catalog" class="nav-link">Catalog</a>
+            <!-- <a href="/catalog" class="nav-link">Catalog</a> -->
             <a href="/about-us" class="nav-link">About Us</a>
-            <a href="/contact-us" class="nav-link">Contact Us</a>
+            <!-- <a href="/contact-us" class="nav-link">Contact Us</a> -->
             </div>
         </div>
         <div class="header-right">
