--- a/teamcostco/src/main/resources/templates/customer/sales/detail.html
+++ b/teamcostco/src/main/resources/templates/customer/sales/detail.html
@@ -33,7 +33,7 @@
                 </div>
             </div>
             <div class="sales_menu">
-                <button class="shipping_trace" th:data-sales-id="${item.sales_id}">배송추적</button>
+                <!-- <button class="shipping_trace" th:data-sales-id="${item.sales_id}">배송추적</button> -->
             </div>
         </div>
 
