--- a/teamcostco/src/main/resources/static/css/contents/sales_detail.css
+++ b/teamcostco/src/main/resources/static/css/contents/sales_detail.css
@@ -27,7 +27,7 @@
     flex-direction: column;
     flex: 1;
     border-left: 1px solid #eef;
-    padding: 0 20px;
+    padding-left: 20px;
     gap: 10px;
     justify-content: center;
 }
@@ -39,8 +39,9 @@
     cursor: pointer;
 }
 
+
 .content h3 {
-    margin: 0;
+    margin: 0 0 20px 0;
 }
 
 .description_area {
@@ -56,6 +57,12 @@
     flex-direction: row;
     gap: 5px;
     color: gray;
+}
+
+.sales_item {
+    margin-right: 10px;
+    padding-bottom: 10px;
+    border-bottom: 1px solid #eef;
 }
 
 .sales_items {
@@ -111,11 +118,10 @@
 }
 
 .cart_button {
-    height: 30px;
+    height: 35px;
     min-width: 100px;
     width: 100px;
     margin-top: auto;
-    margin-right: 20px;
     margin-left: 20px;
     border: 1px solid #eef;
     background-color: #fefeff;
@@ -209,4 +215,71 @@
 #continue_shopping {
     background-color: #6c757d;
     color: #fff;
+}
+
+.sales_item_header {
+    display: flex;
+    justify-content: center;
+}
+
+.sales_menu {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    border-left: 1px solid #eef;
+    padding-left: 20px;
+    gap: 10px;
+    justify-content: center;
+}
+
+.sales_menu>button {
+    height: 35px;
+    border: 1px solid #eef;
+    background-color: #fefeff;
+    cursor: pointer;
+}
+
+.shipping_trace {
+    margin-top: auto;
+}
+
+.sales_item:last-child {
+    padding-bottom: 0;
+    border-bottom: none;
+}
+
+.sales_item_header>h4 {
+    margin: 0;
+}
+
+.sales_item_header h4.pending {
+    color: #858585;
+    font-weight: bold;
+}
+
+.sales_item_header h4.preparing {
+    color: #d8961b;
+    font-weight: bold;
+}
+
+.sales_item_header h4.shipped {
+    color: #2a2a9e;
+    font-weight: bold;
+}
+
+.sales_item_header h4.delivered {
+    color: #008000;
+    font-weight: bold;
+}
+
+.sales_item_header h4.cancelled {
+    color: #FF0000;
+    /* Red */
+    font-weight: bold;
+}
+
+.sales_item_header h4.refunded {
+    color: #800080;
+    /* Purple */
+    font-weight: bold;
 }
