--- a/teamcostco/src/main/resources/templates/customer/sales_list.html
+++ b/teamcostco/src/main/resources/templates/customer/sales_list.html
@@ -8,9 +8,6 @@
         <div class="sales" th:each="sale: ${items}">
             <div class="sales_main">
                 <h3 th:text="${'주문번호: ' + sale.sales_id}"></h3>
-                <div class="sales_item_header">
-                    <h4>주문완료</h4>
-                </div>
                 <div class="sales_items">
                     <div class="sales_item" th:each="item: ${sale.sales_items}">
                         <div class="sales_item_content">
@@ -33,7 +30,19 @@
                 </div>
             </div>
             <div class="sales_menu">
+                <div class="sales_item_header">
+                    <h4 th:switch="${sale.sales_status}" 
+                    th:classappend="${sale.sales_status}">
+                    <span th:case="'pending'">결제대기</span>
+                    <span th:case="'preparing'">배송준비중</span>
+                    <span th:case="'shipped'">배송중</span>
+                    <span th:case="'delivered'">배송완료</span>
+                    <span th:case="'cancelled'">주문취소</span>
+                    <span th:case="'refunded'">환불됨</span>
+                </h4>
+                </div>
                 <button class="view_detail" th:data-sales-id="${sale.sales_id}">상세보기</button>
+                <button class="shipping_trace" th:data-sales-id="${sale.sales_id}" disabled>배송조회</button>
             </div>
         </div>
     </div>
