--- a/teamcostco/src/main/resources/static/css/contents/sales_list.css
+++ b/teamcostco/src/main/resources/static/css/contents/sales_list.css
@@ -4,15 +4,19 @@
     gap: 20px;
     width: calc(100% - 220px);
     margin-left: 20px;
-    background-color: #fff;
-    border: 1px solid #eef;
-    padding: 20px;
+}
+
+.content > h1{
+    text-align: center;
+    font-size: 20px;
+    margin: 40px;
 }
 
 .sales {
     display: flex;
     flex-direction: row;
     border: 1px solid #eef;
+    background-color: #fff;
     padding: 20px;
 }
 
