--- a/teamcostco/src/main/resources/templates/common/sidebar.html
+++ b/teamcostco/src/main/resources/templates/common/sidebar.html
@@ -8,17 +8,17 @@
             <li><a href="/customer/cart">장바구니</a></li>
             <li><a href="/customer/wishlist">위시리스트</a></li>
         </ul>
-        <div class="divider"></div>
     </div>
-    <div class="menu-section">
+    <div class="divider"></div>
+    <!-- <div class="menu-section">
         <h3 class="section-header">고객 지원</h3>
         <ul class="menu-items">
             <li><a href="/customer/FAQs">자주 묻는 질문</a></li>
             <li><a href="#">1:1 문의</a></li>
             <li><a href="#">공지사항</a></li>
         </ul>
-    </div>
-    <div class="divider"></div>
+    </div> -->
+    <!-- <div class="divider"></div> -->
     <div class="menu-section">
         <ul class="menu-items">
             <li><a href="/logout">로그아웃</a></li>
