디버깅용 코드 제거

--- a/teamcostco/src/main/resources/templates/product/product_detail.html
+++ b/teamcostco/src/main/resources/templates/product/product_detail.html
@@ -72,7 +72,7 @@
             <section class="product_details">
                 <h2>상품 정보</h2>
                 <ul>
-                    <li><strong>제조사:</strong> <span th:text="${product.brand}"></span></li>
+                    <li><strong>판매처:</strong> <span th:text="${product.brand}"></span></li>
                     <li><strong>대분류:</strong> <span th:text="${product.category_large}"></span></li>
                     <li><strong>중분류:</strong> <span th:text="${product.category_medium}"></span></li>
                     <li><strong>소분류:</strong> <span th:text="${product.category_small}"></span></li>
