미지원 기능 제거

--- a/teamcostco/src/main/resources/static/css/contents/cart_list.css
+++ b/teamcostco/src/main/resources/static/css/contents/cart_list.css
@@ -235,6 +235,8 @@ h4 {
 }
 
 .total_summary {
+    position: sticky;
+    top:20px;
     display: flex;
     flex-direction: column;
     background-color: #fff;
