--- a/teamcostco/src/main/resources/templates/common/footer.html
+++ b/teamcostco/src/main/resources/templates/common/footer.html
@@ -4,7 +4,7 @@
     <div class="column">
       <h3>팀코스트코 소개</h3>
       <ul>
-        <li><a href="#">팀코스트코는?</a></li>
+        <li><a href="/about-us">팀코스트코는?</a></li>
       </ul>
     </div>
     <div class="column">
@@ -28,10 +28,8 @@
   </div>
 
   <div class="footer_bottom">
-    <p><a href="#">사이트맵</a> | <a href="#">이용약관</a> | <a href="#">개인정보처리방침</a> | <a href="#">영상정보처리기기운영·관리방침</a> | <a
-        href="#">상표 사용 지침</a></p>
-    <p>(주)팀코스트코 | 00000 노원 | 대표자: 전상민 | 사업자 등록번호: 000-00-00000 | 통신판매업 신고번호: 제0000-노원이젠-0001호 | 전화: 0000-0000 | E-mail:
-      <a href="#">고객센터 문의 바로가기</a> | <a href="#">매장/온라인</a> | 개인정보 보호책임자: 한신</p>
-    <p>ⓒ 1999 - 2024 Costco Wholesale Corporation. 모든 권리 보유.</p>
+    <p>(주)팀코스트코 | 00000 노원 | 대표자: 전상민 | 사업자 등록번호: 000-00-00000 | 통신판매업 신고번호: 제0000-노원이젠-0001호 | 전화: 010-3063-3062 | E-mail:
+      corip@kakao.com</a></p>
+    <p>ⓒ 2024 TeamCostco. 모든 권리 보유.</p>
   </div>
 </footer>
