--- a/teamcostco/src/main/resources/templates/common/sidebar.html
+++ b/teamcostco/src/main/resources/templates/common/sidebar.html
@@ -1,8 +1,8 @@
 <div class="sidebar">
     <div class="menu-section">
-        <h3 class="section-header">내 계정 관리</h3>
+        <h3 class="section-header">MY 쇼핑</h3>
         <ul class="menu-items">
-            <li><a href="/customer/customer_info">내 정보</a></li>
+            <!-- <li><a href="/customer/customer_info">내 정보</a></li> -->
             <li><a href="/customer/saleslist">주문내역</a></li>
             <li><a href="/customer/shipping_address">배송지 관리</a></li>
             <li><a href="/customer/cart">장바구니</a></li>
