--- a/teamcostco/src/main/resources/static/css/common/styles.css
+++ b/teamcostco/src/main/resources/static/css/common/styles.css
@@ -56,6 +56,7 @@ body {
 body {
     opacity: 0;
     transition: opacity 0.3s ease-in;
+    background-color: rgb(250, 250, 255);
 }
 
 body.loaded {
@@ -96,6 +97,7 @@ tbody {
 main {
     background-color: rgb(250, 250, 255);
     min-width: 1200px;
+    margin-bottom: auto;
 }
 
 .page-title {
