--- a/teamcostco/src/main/resources/static/css/contents/cart_list.css
+++ b/teamcostco/src/main/resources/static/css/contents/cart_list.css
@@ -35,6 +35,10 @@ h4 {
     background-color: #fff;
 }
 
+.cart_item:last-child{
+    margin-bottom: 0;
+}
+
 
 .item_info_area {
     display: flex;
