주문처리오버레이추가

--- a/teamcostco/src/main/resources/static/css/common/header.css
+++ b/teamcostco/src/main/resources/static/css/common/header.css
@@ -46,6 +46,13 @@ header {
 
 .icon-box>* {
     cursor: pointer;
+    padding:0 8px;
+}
+
+.icon-box{
+    display:flex;
+    flex-direction: row;
+    justify-content: center;
 }
 
 
