--- a/teamcostco/src/main/resources/templates/purchase/purchase.html
+++ b/teamcostco/src/main/resources/templates/purchase/purchase.html
@@ -17,8 +17,8 @@
 
                 <!-- 배송지 정보 -->
                 <div class="shipping-info">
-                    <div class="section-title">받으시는분
-                        <div class="change_address_btn">주소선택</div>
+                    <div class="section-title">받으시는분 (기본배송지)
+                        <div class="change_address_btn">배송지관리</div>
                     </div>
                     <div class="input-box">
                         <input type="text" id="recipient_name" name="recipient_name"
